--- a/spring-cloud-starter-task-jdbchdfs-local/README.adoc
+++ b/spring-cloud-starter-task-jdbchdfs-local/README.adoc
@@ -1,8 +1,10 @@
 //tag::ref-doc[]
 = JdbcHdfs Task
 
-This task exports data from a Jdbc table(s) into CSV files on an HDFS using a single batch job.  When launching the task, you must
-either supply the select statement by setting the sql parameter, or you can supply both tableName and columns options
+This task exports data from a Jdbc table(s) into CSV files on an HDFS using a
+single batch job.  When launching the task, you must
+either supply the select statement by setting the sql parameter, or you can
+supply both tableName and columns options
 (which will be used to build the SQL statement).
 
 == Options
@@ -42,4 +44,36 @@ $$jdbchdfs.user-principal$$:: $$The user principal to be used.$$ *($$String$$, d
 NOTE: If the jdbchdfs.datasource properties are not set the application will use the spring.datasource properties as
 the settings for the datasource that retrieves table data.
 
+== Building with Maven
+
+```
+$ ./mvnw clean install -PgenerateApps
+$ cd apps/jdbchdfs-local-task
+$ ./mvnw clean package
+```
+
+== Example
+The following example reads the FOO table and writes files to the local file
+system based on the partition column specified in the parameters.
+The jdbchdfs.datasource.* refers to the datastore that contains the data to be
+migrated, while the spring.datasource.* refers to the datastore that will hold
+the task and batch information.
+```
+java -jar target/jdbchdfs-local-task-{version}.jar \
+--server.port=0 \
+--jdbchdfs.directory=/data/jdbchdfstask2/ \
+--jdbchdfs.tableName=FOO \
+--jdbchdfs.partitionColumn=id \
+--jdbchdfs.columnNames=PROPKEY,PROPVALUE \
+--spring.application.name=helloWorld \
+--jdbchdfs.datasource.url=jdbc:postgresql://localhost:5432/mydb \
+--jdbchdfs.datasource.username=myusername  \
+--jdbchdfs.datasource.driverClassName=org.postgresql.Driver \
+--jdbchdfs.datasource.password=mypassword \
+--spring.datasource.url=jdbc:mariadb://localhost:3306/practice \
+--spring.datasource.username=myusername \
+--spring.datasource.password=mypassword \
+--spring.datasource.driverClassName=org.mariadb.jdbc.Driver \
+spring.profiles.active=master
+```
 //end::ref-doc[]
