--- a/spring-cloud-starter-task-jdbchdfs-local/README.adoc
+++ b/spring-cloud-starter-task-jdbchdfs-local/README.adoc
@@ -76,4 +76,8 @@ java -jar target/jdbchdfs-local-task-{version}.jar \
 --spring.datasource.driverClassName=org.mariadb.jdbc.Driver \
 spring.profiles.active=master
 ```
+== Contributing
+
+We welcome contributions! Follow this https://github.com/spring-cloud-task-app-starters/app-starters-release/blob/master/spring-cloud-task-app-starters-docs/src/main/asciidoc/contributing.adoc[link] for more information on how to contribute.
+
 //end::ref-doc[]
