--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,7 @@
 # Jdbc-to-HDFS Task Application
 
+= PLEASE NOTE: This project is no longer actively developed.
+
 To learn more about this application and the supported properties, please review the following link.
 
 include::spring-cloud-starter-task-jdbchdfs-local/README.adoc[]
