--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+# jdbchdfs-local is no longer actively maintained by VMware, Inc.
+
 # Jdbc-to-HDFS Task Application
 
 = PLEASE NOTE: This project is no longer actively developed.
